tests/compiler/let_statement_type_annotation_1.kk
let x: string = 2
